kubernetes/infrastructure/monitoring/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-grafana-external-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kubernetes-grafana.local.fascinated.cc`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: compress
          namespace: traefik
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls:
    secretName: fascinated-cc
